Fix #503 (IE9 scrollbar)

--- a/less/bootstrap-select.less
+++ b/less/bootstrap-select.less
@@ -123,6 +123,7 @@
 
     &.inner {
       position: static;
+      float: none;
       border: 0;
       padding: 0;
       margin: 0;
